discussion/kv_engine/182556/182556_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add ItemPagerFactory

Adds a factory class for the item pager tasks. We will extend this
factory to return a  cross-bucket item pager task for buckets with
that feature enabled.

Change-Id: Ib7e0dcba94ca35f7074205f389f7a4f08b278809

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-09 20:40:56.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-09 21:20:04.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42858/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42858/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21802/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21802/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21802/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23845/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23845/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51069/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21098/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/551/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11617/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11527/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24255/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25088/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23291/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32264/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
